# press

./: .editorconfig  .gitignore  .justfile  CONTRIBUTING.md  COPYING  README.md  io.github.masakk1.press.json  meson.build  uncrustify.cfg  vala-lint.conf
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md
data/: io.github.masakk1.press.desktop.in  io.github.masakk1.press.gschema.xml  io.github.masakk1.press.metainfo.xml.in  io.github.masakk1.press.service.in  meson.build  presets.json
data/icons/: meson.build
docs/: advanced_presets.md  developers.md  translate.md
po/: LINGUAS  POTFILES.in  es.po  it.po  meson.build
src/: application.vala  compress_config.vala  compressor.vala  config.vapi  config_page.vala  main.vala  meson.build  presets_loader.vala  quality_presets.vala  translatable.vala  window.ui  window.vala
src/ui/: config_page.ui  press.gresource.xml  window.ui
